crates/stef-compiler/tests/snapshots/compiler__error_validate@struct_gen_unused.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "struct Sample<T> {\n    value: string @1,\n}"
input_file: crates/stef-compiler/tests/inputs/validate/struct_gen_unused.stef
---
  × invalid generic type found
  ├─▶ unused generic type argument found
  ╰─▶ unused generic type argument `T`
   ╭─[struct_gen_unused.stef:1:1]
 1 │ struct Sample<T> {
   ·               ┬
   ·               ╰── declared here
 2 │     value: string @1,
 3 │ }
   ╰────
  help: each declared generic must be used in some way

