crates/stef-compiler/tests/snapshots/compiler__error_validate@struct_named_dup_id.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "struct Sample {\n    field1: string @1,\n    field2: string @1,\n}"
input_file: crates/stef-compiler/tests/inputs/validate/struct_named_dup_id.stef
---
  × duplicate ID found
  ├─▶ duplicate ID in a field
  ╰─▶ duplicate ID 1 in field `field2`, already used in `field1`
   ╭─[struct_named_dup_id.stef:1:1]
 1 │ struct Sample {
 2 │     field1: string @1,
   ·                    ─┬
   ·                     ╰── first declared here
 3 │     field2: string @1,
   ·                    ─┬
   ·                     ╰── used here again
 4 │ }
   ╰────
  help: the IDs for each field must be unique

