crates/stef-compiler/tests/snapshots/compiler__error_validate@struct_named_dup_name.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: "struct Sample {\n    field: string @1,\n    field: string @2,\n}"
input_file: crates/stef-compiler/tests/inputs/validate/struct_named_dup_name.stef
---
  × duplicate name found
  ├─▶ duplicate name in a field
  ╰─▶ duplicate field name `field`
   ╭─[struct_named_dup_name.stef:1:1]
 1 │ struct Sample {
 2 │     field: string @1,
   ·     ──┬──
   ·       ╰── first declared here
 3 │     field: string @2,
   ·     ──┬──
   ·       ╰── used here again
 4 │ }
   ╰────
  help: the names of each field must be unique

