crates/stef-compiler/tests/snapshots/compiler__error_validate@struct_unnamed_tuple_single.stef.snap
---
source: crates/stef-compiler/tests/compiler.rs
description: struct Sample((u8) @1)
input_file: crates/stef-compiler/tests/inputs/validate/struct_unnamed_tuple_single.stef
---
  × invalid tuple element size found
  ╰─▶ tuples with ❬W❭a single element❬W❭ are invalid
   ╭─[struct_unnamed_tuple_single.stef:1:1]
 1 │ struct Sample((u8) @1)
   ·               ──┬─
   ·                 ╰── declared here
   ╰────
  help: a tuple must have between 2 and 12 elements

